--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+
+    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+  </head>
+  <body>
+    Hello World
+    from Andrey Yaromenok<br>
+    <br>
+    <a href="https://github.com/ayaromenok/Android_ImageMagick7">ImageMagick7/with
+      OpenMP port to Android</a><br>
+    <br>
+    <a
+href="https://github.com/ayaromenok/papercraft/tree/master/backup/zioprudenzio">BackUp
+      of Fabrizio Prudenziati papercrafts - german ships 1/400</a><br>
+  </body>
+</html>
