--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+    <meta http-equiv="content-type" content="text/html;
+      charset=windows-1252">
+    <title>Andrey Yaromenok page</title>
+    <meta name="author" content="Andrey Yaromenok">
+    <meta name="description" content="Andrey Yaromenok page">
   </head>
   <body>
-    Hello World
-    from Andrey Yaromenok<br>
+    Hello World from Andrey Yaromenok<br>
     <br>
     <a href="https://github.com/ayaromenok/Android_ImageMagick7">ImageMagick7/with
+
       OpenMP port to Android</a><br>
     <br>
     <a
 href="https://github.com/ayaromenok/papercraft/tree/master/backup/zioprudenzio">BackUp
+
       of Fabrizio Prudenziati papercrafts - german ships 1/400</a><br>
+    <br>
+    ayaromenok at gmail dot com<br>
   </body>
 </html>
