IM7Test link added

--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
     <meta name="description" content="Andrey Yaromenok page">
   </head>
   <body>
-    Hello World from Andrey Yaromenok<br>
-    <br>
-    <a href="https://github.com/ayaromenok/Android_ImageMagick7">ImageMagick7/with
+    Description of GitHub Projects<a
+      href="https://github.com/ayaromenok/IM7Test"><br>
+      <br>
+      ImgMagick7 Test for Android</a> - test app for <a
+      href="https://github.com/ayaromenok/Android_ImageMagick7">ImageMagick7/with
 
-      OpenMP port to Android</a><br>
+
+      OpenMP port to Android</a> , also published to <a
+href="https://play.google.com/store/apps/details?id=info.yaromenok.IM7Test">Android
+      Play</a> <br>
     <br>
     <a
 href="https://github.com/ayaromenok/papercraft/tree/master/backup/zioprudenzio">BackUp
+
 
       of Fabrizio Prudenziati papercrafts - german ships 1/400</a><br>
     <br>
